c4prj2_input/grade.txt
Grading at Tue Dec  1 18:35:59 UTC 2020
Compiling cards.c -> cards.o
Compiling deck.c -> deck.o
Compiling input.c -> input.o
input.c: In function ‘hand_from_string’:
input.c:32:9: error: format ‘%d’ expects argument of type ‘int’, but argument 2 has type ‘size_t {aka long unsigned int}’ [-Werror=format=]
  printf("index: %d\n", index);
         ^
input.c:36:9: error: format ‘%d’ expects argument of type ‘int’, but argument 2 has type ‘size_t {aka long unsigned int}’ [-Werror=format=]
  printf("index: %d\n", index);
         ^
cc1: all warnings being treated as errors
Compilation of input.c failed

Overall Grade: F
